# truapi

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REVIEW_TODO.md  REVIEW_TODO_2.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  deny.toml  dotli-permission-audit.md  gradle.properties  index.html  jitpack.yml  package-lock.json  package.json  permission-audit-recap.md  polkadot-android-permission-audit.md  polkadot-desktop-permission-audit.md  polkadot-ios-permission-audit.md  settings.gradle.kts  tsconfig.json  v02-changes.md  vite.config.ts  zizmor
rust/crates/truapi/: Cargo.toml  README.md
rust/crates/truapi-codegen/: .gitignore  Cargo.toml  README.md
rust/crates/truapi-codegen/src/: dart.rs  main.rs  platform.rs  platform_callbacks.rs  rust.rs  rust_dispatcher.rs  rustdoc.rs  ts.rs  typescript.rs
rust/crates/truapi-codegen/src/rust/: dispatcher.rs  wasm_bridge.rs  wire_table.rs
rust/crates/truapi-codegen/src/ts/: examples.rs  explorer.rs  host_callbacks.rs  playground.rs
rust/crates/truapi-codegen/tests/: golden_rust_emit.rs
rust/crates/truapi-codegen/tests/fixtures/: sample.rustdoc.json
rust/crates/truapi-codegen/tests/golden/: dispatcher.rs  host-callbacks-adapter.ts  host-callbacks.ts  wasm_bridge.rs  wire_table.rs  worker-callbacks.ts
rust/crates/truapi-host-cli/: Cargo.toml  README.md  SPEC.md
rust/crates/truapi-host-cli/e2e/: driver.ts  fleet.sh  full-bundle.sh  run-e2e.ts  run.sh  wait-and-sign.sh
rust/crates/truapi-host-cli/js/: battery-reporter.ts  diagnosis-report.ts  diagnosis.test.ts  diagnosis.ts  package.json  runner.ts  ws-provider.ts
rust/crates/truapi-host-cli/js/scripts/: battery.ts  diagnosis.ts  load-bundle.ts  pre-login.ts  preimage-smoke.ts  ring-vrf-smoke.ts  signing-smoke.ts  whoami.ts
rust/crates/truapi-host-cli/recordings/: signing-host-diagnosis.tape
rust/crates/truapi-host-cli/src/: accounts.rs  alloc.rs  attestation.rs  chain.rs  frame_server.rs  main.rs  metrics.rs  network.rs  platform.rs  relay.rs  report.rs  script_runner.rs  sessions.rs  signing_shell.rs  terminal_ui.rs
rust/crates/truapi-host-cli/src/alloc/: extension.rs  extrinsic.rs  ring.rs  rpc.rs  slot.rs
rust/crates/truapi-host-cli/tests/: signing_host_cli.rs
rust/crates/truapi-host-cli/tests/fixtures/: paseo-next-v2-metadata.scale
rust/crates/truapi-platform/: Cargo.toml  README.md
rust/crates/truapi-platform/src/: lib.rs  mock.rs
rust/crates/truapi-platform/tests/: bounds.rs  object_safety.rs
rust/crates/truapi-provider/: Cargo.toml  NOTICE  build-ios-xcframework.sh
rust/crates/truapi-provider-ffi/: Cargo.toml  build-ios-xcframework.sh
rust/crates/truapi-provider-ffi/src/: lib.rs
rust/crates/truapi-provider/examples/: gateway-dotli-paseo-next-v2.json  gateway.rs  paseo_demo.rs
rust/crates/truapi-provider/networks/: paseo-next-v2-asset-hub.json  paseo-next-v2-bulletin.json  paseo-next-v2-people.json  paseo.json  previewnet-asset-hub.json  previewnet-bulletin.json  previewnet-people.json  previewnet.json
rust/crates/truapi-provider/src/: config.rs  error.rs  ffi.rs  js.rs  lib.rs  light.rs  logging.rs  networks.rs  provider.rs  ws.rs  ws_web.rs
rust/crates/truapi-provider/src/light_platform_web/: helpers.rs  mod.rs  platform.rs  socket.rs
rust/crates/truapi-provider/tests/: live_paseo.rs  web_browser.rs  ws_loopback.rs
rust/crates/truapi-provider/tests/fixtures/: paseo.json
rust/crates/truapi-server/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
rust/crates/truapi-server/src/: chain_runtime.rs  core.rs  debug_log.rs  dispatcher.rs  frame.rs  host_core.rs  host_logic.rs  host_rpc_client.rs  lib.rs  logging.rs  mock_wallet.rs  native.rs  runtime.rs  subscription.rs  test_support.rs  transport.rs  wasm.rs  ws_bridge.rs
rust/crates/truapi-server/src/host_logic/: alias.rs  allowance_signer.rs  attestation.rs  bulletin.rs  dotns.rs  entropy.rs  extrinsic.rs  features.rs  identity.rs  mod.rs  permissions.rs  product_account.rs  session.rs  session_store.rs  sso.rs  sso_messages.rs  sso_pairing.rs  statement_store.rs  transaction.rs
rust/crates/truapi-server/src/runtime/: allowances.rs  auth_state.rs  authority.rs  bulletin_rpc.rs  identity.rs  pairing_host.rs  services.rs  signing_host.rs  sso_pairing.rs  sso_remote.rs  statement_allowance.rs  statement_store.rs  statement_store_rpc.rs  test_support.rs
rust/crates/truapi-server/src/smoldot_provider/: mod.rs  native_platform.rs  wasm_helpers.rs  wasm_platform.rs  wasm_socket.rs
rust/crates/truapi-server/src/wasm/: generated_bridge.rs  mod.rs
rust/crates/truapi-server/tests/: golden_frame.rs  wasm_crypto_vectors.rs  wire_result_shape.rs  wire_table_ts_parity.rs
rust/crates/truapi-server/tests/common/: mod.rs
rust/crates/truapi-server/tests/fixtures/: bulletin_paseo_metadata.scale
rust/crates/truapi/examples/: wire_vectors.rs
rust/crates/truapi/src/: api.rs  failure.rs  lib.rs  serde_helpers.rs  v01.rs  v02.rs  versioned.rs
rust/crates/truapi/src/api/: account.rs  calls.rs  chain.rs  chat.rs  coin_payment.rs  contacts.rs  entropy.rs  favourites.rs  jsonrpc.rs  local_storage.rs  mod.rs  navigation.rs  notifications.rs  p2p_media.rs  payment.rs  permissions.rs  preimage.rs  resource_allocation.rs  session.rs  signing.rs  statement_store.rs  system.rs  testing.rs  theme.rs  transaction.rs
rust/crates/truapi/src/next/: mod.rs  payment.rs
rust/crates/truapi/src/traits/: account.rs  calls.rs  chain.rs  chat.rs  entropy.rs  local_storage.rs  mod.rs  payment.rs  permissions.rs  preimage.rs  signing.rs  statement_store.rs
rust/crates/truapi/src/v01/: account.rs  chain.rs  chain_interaction.rs  chat.rs  coin_payment.rs  common.rs  contacts.rs  custom_renderer.rs  entropy.rs  favourites.rs  jsonrpc.rs  local_storage.rs  mod.rs  navigation.rs  notifications.rs  p2p_media.rs  payment.rs  permissions.rs  preimage.rs  resource_allocation.rs  session.rs  (+7 more)
rust/crates/uniffi-bindgen-cli/: Cargo.toml  README.md
rust/crates/uniffi-bindgen-cli/src/: main.rs
(+441 files in other folders)
