[package]
name = "truapi-codegen"
version = "0.1.0"
edition = "2021"
description = "TrUAPI code generator: rustdoc JSON to TS client + Rust glue"

[[bin]]
name = "truapi-codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
