[package]
name = "truapi-codegen"
version = "0.1.0"
edition.workspace = true
description = "TrUAPI code generator: rustdoc JSON to TS client + Rust glue"

[[bin]]
name = "truapi-codegen"
path = "src/main.rs"

[dependencies]
truapi = { path = "../truapi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indoc = "2"
convert_case = "0.6"
