[package]
name = "truapi-platform"
version = "0.1.0"
edition.workspace = true
description = "Platform capability traits for TrUAPI host implementations"
license = "MIT"

[dependencies]
truapi = { path = "../truapi" }
async-trait = "0.1"
derive_more = { version = "2", features = ["debug", "display", "error"] }
futures = "0.3"
parity-scale-codec = { version = "3", features = ["derive"] }
unicode-normalization = "0.1"
url = "2"
zeroize = { version = "1", default-features = false, features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
