[package]
name = "truapi-provider-ffi"
version = "0.1.0"
edition.workspace = true
description = "Swift/UniFFI bindings for truapi-provider: an embedded smoldot ChainProvider for iOS and other native hosts"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "truapi_provider_ffi"

[[bin]]
name = "uniffi-bindgen"
required-features = ["cli"]

[features]
# `cli` builds the uniffi-bindgen binary used to generate the Swift bindings.
cli = ["uniffi/cli"]

[dependencies]
truapi = { path = "../truapi" }
truapi-platform = { path = "../truapi-platform" }
truapi-provider = { path = "../truapi-provider", default-features = false, features = ["smoldot", "networks"] }
futures = "0.3"
uniffi = "0.28"
thiserror = "1"
