[package]
name = "truapi-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "TrUAPI host runtime: frames, dispatcher, and subscriptions"

[dependencies]
truapi = { path = "../truapi" }
futures = "0.3"
parity-scale-codec = { version = "3", features = ["derive"] }
tracing = "0.1"
