[package]
name = "truapi-server"
version = "0.1.0"
edition.workspace = true
description = "TrUAPI server runtime: dispatcher, frames, SCALE, streams"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []

[lints.rust]
unsafe_code = "forbid"

[dependencies]
truapi = { path = "../truapi" }
truapi-platform = { path = "../truapi-platform" }
async-trait = "0.1"
derive_more = { version = "2", features = ["display"] }
futures = "0.3"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
parity-scale-codec = { version = "3", features = ["derive"] }
primitive-types = { version = "0.13", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-normalization = "0.1"
url = "2"
hex = "0.4"
blake2-rfc = { version = "0.2", default-features = false }
sp-crypto-hashing = { version = "0.1", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
schnorrkel = { version = "0.11.5", default-features = false, features = ["alloc", "getrandom"] }
substrate-bip39 = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.13", default-features = false, features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
tracing = "0.1"
# `registry` + `std` only: pulls the Registry + per-layer filter/reload, but
# not `env-filter` (which drags in `regex`, heavy on wasm).
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
subxt-rpcs = { version = "0.50.1", default-features = false, features = ["native"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
subxt-rpcs = { version = "0.50.1", default-features = false, features = ["web"] }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
futures-util = "0.3"
pin-project = "1"
send_wrapper = { version = "0.6", features = ["futures"] }
web-time = "1"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "CloseEvent",
    "console",
    "Event",
    "MessageEvent",
    "WebSocket",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
