[package]
name = "truapi-server"
version = "0.1.0"
edition.workspace = true
description = "TrUAPI server runtime: dispatcher, frames, SCALE, streams"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-reference-types",
    "--enable-sign-ext",
    "--strip-debug",
    "--strip-dwarf",
    "--strip-producers",
]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[features]
default = []
ws-bridge = ["dep:tokio", "dep:tokio-tungstenite", "dep:rand"]

[dependencies]
truapi = { path = "../truapi" }
truapi-platform = { path = "../truapi-platform" }
async-trait = "0.1"
derive_more = { version = "2", features = ["debug", "display", "error", "from"] }
futures = "0.3"
futures-timer = "3"
parity-scale-codec = { version = "3", features = ["derive"] }
scale-decode = { version = "0.16", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-normalization = "0.1"
url = "2"
hex = "0.4"
nanoid = "0.4"
blake2b_simd = { version = "1", default-features = false }
sp-crypto-hashing = { version = "0.1", default-features = false }
schnorrkel = { version = "0.11.5", default-features = false, features = ["alloc", "getrandom"] }
substrate-bip39 = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.13", default-features = false, features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
tracing = "0.1"
# `registry` + `std` only: pulls the Registry + per-layer filter/reload, but
# not `env-filter` (which drags in `regex`, heavy on wasm).
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
verifiable = { git = "https://github.com/paritytech/verifiable.git", rev = "19b03deb89b8dea484b143afc8bbe048a74bc1ff" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
rand = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util"], optional = true }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["handshake"], optional = true }
uniffi = "0.29.4"
subxt = { version = "0.50.2", default-features = false, features = ["native"] }
subxt-rpcs = { version = "0.50.1", default-features = false, features = ["jsonrpsee", "native"] }
frame-metadata = { version = "23", default-features = false, features = ["std", "current", "decode"] }
scale-info = { version = "2.11", default-features = false, features = ["decode"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = { version = "3", features = ["wasm-bindgen"] }
js-sys = "0.3"
subxt = { version = "0.50.2", default-features = false, features = ["web"] }
subxt-rpcs = { version = "0.50.1", default-features = false, features = ["web"] }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
send_wrapper = { version = "0.6", features = ["futures"] }
web-time = "1"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
scale-info = "2.11"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }

[lints]
workspace = true
