[package]
name = "truapi"
version = "0.1.0"
edition = "2021"
description = "TrUAPI trait and type definitions"

[dependencies]
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
parity-scale-codec = { version = "3", features = ["derive"] }
truapi-macros = { path = "../truapi-macros" }

[features]
default = []
