[package]
name = "truapi"
version = "0.5.1"
edition.workspace = true
license.workspace = true
description = "TrUAPI trait and type definitions"

[dependencies]
derive_more = { version = "2", features = ["display"] }
futures = "0.3"
hex = "0.4"
parity-scale-codec = { version = "3", features = ["derive"] }
truapi-macros = { path = "../truapi-macros" }

[features]
default = []
