[package]
name = "uniffi-bindgen-cli"
version = "0.1.0"
edition = "2024"
description = "Thin CLI wrapper around uniffi::uniffi_bindgen_main() for the TrUAPI workspace"
license = "MIT"

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
